header and spacing issues

--- a/website/projects/scimaps/src/app/pages/about/about.theme.scss
+++ b/website/projects/scimaps/src/app/pages/about/about.theme.scss
@@ -59,6 +59,9 @@
 .spacer-24 {
   margin-bottom: 1.5rem;
 }
+.spacer-48 {
+  margin-bottom: 3rem;
+}
 
 // Common style for all links
 a {
